[package]
name = "nannou_practice"
version = "0.1.0"
authors = ["nkjmsss"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.11.1"

# --------------- Examples
[[example]]
name = "template"
path = "src/template.rs"

[[example]]
name = "perlin"
path = "src/perlin/app.rs"

[[example]]
name = "circle"
path = "src/circle/app.rs"

[[example]]
name = "waveclock"
path = "src/waveclock/app.rs"

[[example]]
name = "cell_automata"
path = "src/cell_automata/app.rs"
