[package]
name = "screenshot"
version = "0.1.0"
authors = ["nkjmsss"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.12"
vulkano = "0.16"

[[example]]
name = "screenshot"
path = "./examples/app.rs"
